# SNAP-Shortclip-Navigator-and-Auto-Producer

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  audio2text.py  chunk.ipynb  chunk.py  clip4clip.ipynb  config.json  crawlView.py  crawling.ipynb  crawling.py  cut_video.py  dbs.py  docker-compose.yml  evaluate_summarize.py  gpt_summarize.py  package-lock.json  pipeline.py  project.ipynb  pyproject.toml  request1_tmp.json  requests1.json  requests2.json  requests3.json  requirements-llm.txt  requirements.txt  score.py  server2.py  settings.py  snap.sh  sql.sh  summ_chunk.py  summarize-langchain.py  summarize.py  summarizelangchain.py  text2summ.py  timestamp.py  top_k_text.py  (+5 more)
Retrieval/: pipeline_text_retrieval.py  pipeline_video_retrieval.py  pyproject.toml  score.py  visual_score.py
audio1/: Dockerfile  audio2text.py  pipeline1.py  pyproject.toml  youtube2audio.py
audio1/utils/: audioUtils.py
clip4clip/: .dockerignore  .gitignore  dbs.py  pyproject.toml  settings.py  visual_score.py
llm/: .gitignore  LICENSE  README.md  pipeline.py  pipeline4eval.py  pyproject.toml  settings.py  text2summ.py  visual_score.py  youtube.sh  youtube2audio.py
llm/reference/llm/: README.md
llm/utils/: audioUtils.py  crawlers.py  preprocess.py  prompts.py  scores.py
llm2/: .bashrc  Dockerfile  pipeline2.py  pyproject.toml  text2summ.py
llm2/utils/: crawlers.py  domainFlow.py  llmUtils.py  prompts.py  scores.py  videoUtils.py
reference/llm/: README.md
reference/paper/: README.md
reference/speech/: README.md
utils/: audioUtils.py  audioutils.py  crawlers.py  domainFlow.py  domainflow.py  get_src.py  llmUtils.py  preprocess.py  prompt.py  prompts.py  score.py  scores.py  utils.py  videoUtils.py  videoedit.py
video-text/: text_emb.py  video_emb.py  video_sim.py
