[tool.poetry]
name = "youtube-shorts"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
librosa = "*"
transformers = "4.35.0"
soundfile = "*"
ffmpeg = "*"
torch = "1.11.0"
langchain = "*"
moviepy = "*"
spacy = "*"
pandas = "*"
beautifulsoup4 = "*"
scikit-learn = "*"
tiktoken = "*"
rouge-score = "*"
pytube = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
