[tool.poetry]
name = "youtube-shorts"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
librosa = "0.10.1"
transformers = "4.35.0"
soundfile = "0.12.1"
langchain = "*"
moviepy = "1.0.3"
spacy = "3.4.3"
pandas = "2.0.3"
scikit-learn = "1.3.2"
tiktoken = "0.6.0"
rouge-score = "0.1.2"
pytube = "15.0.0"
datasets = "2.14.7"
langchain_community = "*"
matplotlib = "*" 
rouge = "*"
torch = "1.11.0"
pymysql = "*"
yt-dlp = "^2024.3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
