[tool.poetry]
name = "youtube-shorts-llm"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
transformers = "4.35.0"
soundfile = "0.12.1"
beautifulsoup4 = "4.12.3"
scikit-learn = "1.3.2"
tiktoken = "0.6.0"
rouge-score = "0.1.2"
langchain = "^0.1.11"
langchain-community = "^0.0.27"
selenium = "^4.18.1"
torch = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
